We don't seem to memory-report parts of display lists
Categories
(Core :: Web Painting, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox69 | --- | fixed |
People
(Reporter: bzbarsky, Assigned: emilio)
References
(Blocks 1 open bug)
Details
(Whiteboard: [overhead:noted])
Attachments
(1 file)
| Reporter | ||
Comment 1•7 years ago
|
||
Comment 2•7 years ago
|
||
Updated•7 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 3•6 years ago
|
||
For now I added everything to the same bucket, but I wrote this so it should be
easy to add more buckets as needed (either to mArenaSizes, or more specific ones
like the style system has). But this is probably enough for now.
Comment 5•6 years ago
|
||
| bugherder | ||
Comment 6•6 years ago
•
|
||
== Change summary for alert #21394 (as of Mon, 10 Jun 2019 15:20:45 GMT) ==
Improvements:
6% Heap Unclassified windows7-32-shippable opt 38,387,954.33 -> 36,091,129.87
5% Heap Unclassified windows10-64-shippable-qr opt 57,209,667.24 -> 54,083,385.68
5% Heap Unclassified windows10-64-shippable opt 48,806,432.63 -> 46,571,146.74
3% Base Content Heap Unclassified windows10-64-shippable opt 1,608,155.33 -> 1,556,494.00
3% Heap Unclassified macosx1010-64-shippable opt 79,320,935.43 -> 76,822,249.88
3% Heap Unclassified linux64-shippable opt 83,973,257.79 -> 81,410,903.35
3% Base Content Heap Unclassified windows10-64-shippable-qr opt 1,591,473.33 -> 1,545,424.00
For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=21394
Description
•