layout/painting/RetainedDisplayListBuilder.h
@@ -11,6 +11,7 @@
 #include "mozilla/Maybe.h"
 #include "mozilla/TypedEnumBits.h"
 
+class nsWindowSizes;
 namespace mozilla {
 class DisplayListChecker;
 }  // namespace mozilla
@@ -185,6 +186,7 @@ struct RetainedDisplayListBuilder {
    * the frames in the modified frame lists.
    */
   void ClearFramesWithProps();
+  void AddSizeOfIncludingThis(nsWindowSizes&) const;
 
   NS_DECLARE_FRAME_PROPERTY_DELETABLE(Cached, RetainedDisplayListBuilder)
 
